# Composer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-configuration-deployment/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UI-SPEC.md  (+2 more)
.planning/research/: API-REFERENCE.md  ARCHITECTURE.md  ESSENTIA-REFERENCE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: config.py  database.py  main.py
app/models/: playlist.py  schemas.py  settings.py  track.py
app/routers/: api_analysis.py  api_chat.py  api_health.py  api_library.py  api_settings.py  api_sync.py  pages.py
app/services/: analysis_service.py  audio_analyzer.py  chat_service.py  encryption.py  lidarr_client.py  llm_client.py  ollama_client.py  playlist_engine.py  plex_client.py  settings_service.py  sync_scheduler.py  sync_service.py
app/templates/: base.html
tests/: conftest.py  test_analysis_api.py  test_analysis_service.py  test_audio_analyzer.py  test_chat_service.py  test_database.py  test_encryption.py  test_health.py  test_library_api.py  test_playlist_engine.py  test_plex_client_tracks.py  test_plex_playlist.py  test_schemas.py  test_service_clients.py  test_settings_api.py  test_settings_service.py  test_sync_api.py  test_sync_scheduler.py  test_sync_service.py  test_track_model.py
(+47 files in other folders)
